# CS180-Project

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
frontend/src/app/: manifest.ts
frontend/src/components/: TestComponent.tsx
frontend/src/lib/: testLib.tsx
src/app/test/: page.tsx
src/app/utils/: testUtils.ts
src/backend/: .gitignore  README.md  merged_recipes.json  package-lock.json  pyproject.toml
src/backend/exploratory/: content-curation.ipynb  recipe_embeding_yay.csv  recipes_with_embeddings.csv
src/backend/src/: config.py  main.py
src/backend/src/api/routes/: diet.py  liked.py  recipes.py  user.py
src/backend/src/db/: diet_client.py  models.py  recipe_client.py
src/backend/src/schemas/: diet.py  recipe.py
src/backend/src/schemas/recipe_directory/: instructions.py  recipe.py  recipe_deck.py  recipe_test.py
src/backend/src/tests/: merged_recipes.json  test_diet.py  test_diet_client.py  test_recipe.py  test_recipe_client.py  test_recipes.py
src/frontend/: README.md  jest.config.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
src/frontend/__tests__/: redirect.test.tsx
src/frontend/__tests__/api/: recipe.test.ts
src/frontend/__tests__/components/: account.test.tsx  avatar.test.tsx  diet-form.test.tsx  recipe-card.test.tsx  recipe-carousel.test.tsx  tab-bar.test.tsx  test-recipe.test.tsx
src/frontend/__tests__/pages/: fyp.test.tsx  login.test.tsx  profile.test.tsx
src/frontend/src/app/: api.ts  layout.tsx  page.tsx
(+28 files in other folders)
